--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,11 +6,11 @@ parts = omelette scripts
 sources-dir = dev
 find-links +=
     http://packages.inigo-tech.com/packages/
-#auto-checkout = 
-#    inigo.templer
+auto-checkout = 
+    inigo.templer
 
-#[sources]
-#inigo.templer = git https://github.com/inigoconsulting/inigo.templer.git
+[sources]
+inigo.templer = git https://github.com/inigoconsulting/inigo.templer.git
 
 [versions]
 inigo.templer = 1.1
