added synchronization of news by activity (re #325)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-#extensions = buildout.bootstrap mr.developer
+extensions = mr.developer
 extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
 package-name = wcc.remotenews
 parts = omelette scripts
